# flowchart-mcp

./: Cargo.toml  README.md  ROADMAP.md  mcp-server.toml
src/: error.rs  lib.rs  main.rs  server.rs  stencils.rs  store.rs  templates.rs
src/engine/: export.rs  import.rs  layout.rs  mod.rs  pdf.rs  validate.rs
src/sequence/: export.rs  mod.rs
src/stencils/: aws.rs  azure.rs  bpmn.rs  gcp.rs  kubernetes.rs  mockup.rs  mod.rs  network.rs  uml.rs
src/types/: inputs.rs  mod.rs  responses.rs
tests/: checkpoint.rs
